[package]
name = "usn-parser"
version = "0.1.0"
edition = "2024"
authors = ["Fu Wang <wangfu91@hotmail.com>"]
description = "A Windows utility for NTFS/ReFS to search the MFT & monitoring the changes of USN Journal."
repository = "https://github.com/wangfu91/usn-parser-rs"
license = "MIT"
keywords = ["windows", "ntfs", "mft", "usn", "journal"]
categories = ["development-tools", "filesystem"]
readme = "README.md"

[dependencies]
usn-journal-rs = { path = "usn-journal-rs" }
clap = { version = "4.5.38", features = ["derive"] }
anyhow = "1.0.98"
wax = "0.6.0"
chrono = "0.4.41"

[profile.release]
opt-level = 3      # Optimize for speed.
lto = "fat"        # Enable "fat" Link Time Optimization for better runtime performance.
codegen-units = 1  # Use a single codegen unit for maximum optimization opportunities.
panic = "abort"    # Abort on panic for smaller binaries and potentially faster code.
strip = true       # Strip debug symbols from the binary.

