[package]
name = "usn-change-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lru = "0.12.0"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_System_Ioctl",
]
