[package]
name = "usn-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
lru = "0.13.0"
usn-change-journal = { path = "../usn-change-journal" }


